fixing form input field being too narrow

--- a/style.css
+++ b/style.css
@@ -918,6 +918,15 @@ footer {
     .footer {
         font-size: .7rem;
         height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 1rem;
+    }
+
+    .footer h2 {
+        font-size: 1.5rem;
     }
 }
 
@@ -989,18 +998,9 @@ footer {
         width: 100%;
         gap: .5rem;
      }
-
-    .footer h2 {
-        font-size: 1.2rem;
-        text-align: center;
-        /* height: 100%; */
-    }
-
-    .footer span {
-        font-size: 1.1rem;
-        text-align: center;
-        line-height: 2rem;
-        height: 100%;
-    }
+     .form-info label input {
+        width: 100%;
+        text-wrap: nowrap;
+     }
 
 }
